@@ -23,5 +23,5 @@ requires: [git, railsapps,
   email,
   devise, omniauth, roles,
   frontend, pages,
-  init, extras, deployment]
+  init, extras, locale, deployment]
 category: collections
