@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.0.1 unreleased
+
+* add 'locale' recipe (contributed by hedgesky)
+
 h3. 3.0.0 June 20, 2014
 
 * rename 'after_everything' as 'stage_three'
